hard-gists/294151/run.log
=== Docker Run Log for 294151 ===
Started at: Mi 29. Okt 13:21:34 CET 2025

[2025-10-29 13:21:35] START: Running container for 294151
[2025-10-29 13:21:35] SUCCESS: Container f20b28d10276428d7a8d5fa7a0086d003a21f821f48433772173b0a7580c5284 started for 294151
=== Container logs for 294151 ===
  File "/snippet.py", line 44
    print "Usage: %s <url>" % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 294151 ===
[2025-10-29 13:21:37] INFO: Container f20b28d10276428d7a8d5fa7a0086d003a21f821f48433772173b0a7580c5284 has stopped
